--- a/src/_includes/css/global.scss
+++ b/src/_includes/css/global.scss
@@ -74,23 +74,20 @@ $halftone: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAADCAYAAABWKL
 
 .heading {
   font-family: Antihuman, arial, sans-serif;
-  letter-spacing: auto;
+  letter-spacing: 1vw;
   font-weight: 100;
   font-size: 11vw;
   margin-top: 3vw;
   line-height: 70%;
   margin-bottom: 0;
-  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAYAAADED76LAAAAF0lEQVQYlWNgYGD4D8U4AUEF1Af0dhMAOBcH+bmFHC0AAAAASUVORK5CYII=);
+  background: none;
 }
 
 @media (min-width: 700px) {
   .heading {
-    font-size: 9vw;
-  }
-}
-@media (min-width: 700px) {
-  .heading {
+    letter-spacing: auto;
     font-size: 8vw;
+    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAYAAADED76LAAAAF0lEQVQYlWNgYGD4D8U4AUEF1Af0dhMAOBcH+bmFHC0AAAAASUVORK5CYII=);
   }
 }
 @media (min-width: 1100px) {
@@ -142,7 +139,7 @@ $halftone: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAADCAYAAABWKL
 /* -------------------- Page Layouts -------------------- */
 
 main {
-  max-width: 100vw;
+  max-width: 98vw;
   margin: 0 auto;
   img {
     max-width: 100%;
@@ -160,8 +157,8 @@ main {
 
 .comicpage {
   width: 1200px;
-  margin-top: 20px;
-  margin: 0 auto;
+  max-width: 98vw;
+  margin: 50px auto;
 }
 
 .bigcontainer {
@@ -189,6 +186,7 @@ main {
 
 .blogsect {
   display: grid;
+  max-width: 95vw;
   grid-gap: 20px;
   grid-template-columns: 1fr 1fr;
 }
